clean up ProfilingIndexManager dead code